Fix contrast in "Add Integration" pages, step circles

--- a/static/css/channels.css
+++ b/static/css/channels.css
@@ -169,7 +169,7 @@ table.channels-table > tbody > tr > th {
     font-size: 24px;
     width: 48px;
     height: 48px;
-    background: #7ec1ea;
+    background: #0091ea;
     border-radius: 32px;
     text-align: center;
     line-height: 48px;
